# pyparrot-sdk

./: .pre-commit-config.yaml  README.md  pyproject.toml  readthedocs.yml  ruff.toml
coursework/ai_class/: droneMapGUI.py
docs/: Makefile  about.rst  bebopcommands.rst  conf.py  gettingstartedslides.rst  license.rst  quickstartbebop.rst  quickstartminidrone.rst  vision.rst
examples/: demoAnafi.py  demoAnafiVision.py  demoAnafiVisionGUI.py  demoBebopDirectFlight.py  demoBebopIndoors.py  demoBebopTricks.py  demoBebopVision.py  demoBebopVisionGUI.py  demoMamboClaw.py  demoMamboDirectFlight.py  demoMamboGroundcam.py  demoMamboGun.py  demoMamboTricks.py  demoMamboVision.py  demoMamboVisionGUI.py  demoMamboVisionGUITwoWindows.py  demoSwingDirectFlight.py  demoSwingJoystick.py
pyparrot/: Anafi.py  Bebop.py  DroneVision.py  DroneVisionGUI.py  Minidrone.py  Model.py  VisionServer.py
pyparrot/commandsandsensors/: DroneCommandParser.py  DroneSensorParser.py  camera.xml
pyparrot/networking/: bleConnection.py  wifiConnection.py
pyparrot/scripts/: findMinidrone.py
pyparrot/utils/: NonBlockingStreamReader.py  vlc.py
