[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyparrot"
version = "1.5.21"
description = "Python interface to control Parrot drones"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Amy McGovern", email = "dramymcgovern@gmail.com" }]
keywords = ["python", "parrot", "drone", "education", "programming"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Education",
  "Topic :: Software Development",
]
dependencies = ["untangle"]

[project.scripts]
find_mambo = "pyparrot.scripts.findMambo:main"

[project.urls]
"Bug Reports" = "https://github.com/amymcgovern/pyparrot/issues"
"Funding" = "https://www.oufoundation.org/portal"
"Say Thanks!" = "https://saythanks.io/to/amymcgovern"
"Source" = "https://github.com/amymcgovern/pyparrot/"

[tool.hatch.build.targets.sdist]
include = ["pyparrot/**"]
exclude = ["contrib", "docs", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["pyparrot"]
