[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "pyparrot-sdk"
version = "1.5.25"
description = "Python interface to control Parrot drones"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Amy McGovern", email = "dramymcgovern@gmail.com" },
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
keywords = ["python", "parrot", "drone", "education", "programming"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Education",
  "Topic :: Software Development",
]
dependencies = ["untangle", "zeroconf"]

[project.optional-dependencies]
vision = ["opencv-python-headless"]
gui = ["PyQt5; platform_machine == 'x86_64'"]
mambo = ["bluepy"]
examples = ["pyparrot-sdk[vision,gui,mambo]", "pygame"]

[project.scripts]
find_mambo = "pyparrot.scripts.findMambo:main"

[project.urls]
"Bug Reports" = "https://github.com/amymcgovern/pyparrot/issues"
"Funding" = "https://www.oufoundation.org/portal"
"Say Thanks!" = "https://saythanks.io/to/amymcgovern"
"Source" = "https://github.com/amymcgovern/pyparrot/"

[tool.uv.build-backend]
module-name = "pyparrot"
module-root = ""
